packages/rspack-test-tools/tests/configCases/errors/rspack-issue-4504/rspack.config.js
/** @type {import('@rspack/core').Configuration} */
module.exports = {
	output: {
		hashFunction: "abc"
	}
};
